; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap_tls_common.c_eap_tls_msg_alloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap_tls_common.c_eap_tls_msg_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpabuf = type { i32 }

@EAP_UNAUTH_TLS_TYPE = common dso_local global i64 0, align 8
@EAP_VENDOR_UNAUTH_TLS = common dso_local global i32 0, align 4
@EAP_VENDOR_TYPE_UNAUTH_TLS = common dso_local global i64 0, align 8
@EAP_WFA_UNAUTH_TLS_TYPE = common dso_local global i64 0, align 8
@EAP_VENDOR_WFA_NEW = common dso_local global i32 0, align 4
@EAP_VENDOR_WFA_UNAUTH_TLS = common dso_local global i64 0, align 8
@EAP_VENDOR_IETF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.wpabuf* (i64, i64, i32, i32)* @eap_tls_msg_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.wpabuf* @eap_tls_msg_alloc(i64 %0, i64 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.wpabuf*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i64 %0, i64* %6, align 8
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* @EAP_UNAUTH_TLS_TYPE, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %20

13:                                               ; preds = %4
  %14 = load i32, i32* @EAP_VENDOR_UNAUTH_TLS, align 4
  %15 = load i64, i64* @EAP_VENDOR_TYPE_UNAUTH_TLS, align 8
  %16 = load i64, i64* %7, align 8
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* %9, align 4
  %19 = call %struct.wpabuf* @eap_msg_alloc(i32 %14, i64 %15, i64 %16, i32 %17, i32 %18)
  store %struct.wpabuf* %19, %struct.wpabuf** %5, align 8
  br label %38

20:                                               ; preds = %4
  %21 = load i64, i64* %6, align 8
  %22 = load i64, i64* @EAP_WFA_UNAUTH_TLS_TYPE, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %31

24:                                               ; preds = %20
  %25 = load i32, i32* @EAP_VENDOR_WFA_NEW, align 4
  %26 = load i64, i64* @EAP_VENDOR_WFA_UNAUTH_TLS, align 8
  %27 = load i64, i64* %7, align 8
  %28 = load i32, i32* %8, align 4
  %29 = load i32, i32* %9, align 4
  %30 = call %struct.wpabuf* @eap_msg_alloc(i32 %25, i64 %26, i64 %27, i32 %28, i32 %29)
  store %struct.wpabuf* %30, %struct.wpabuf** %5, align 8
  br label %38

31:                                               ; preds = %20
  %32 = load i32, i32* @EAP_VENDOR_IETF, align 4
  %33 = load i64, i64* %6, align 8
  %34 = load i64, i64* %7, align 8
  %35 = load i32, i32* %8, align 4
  %36 = load i32, i32* %9, align 4
  %37 = call %struct.wpabuf* @eap_msg_alloc(i32 %32, i64 %33, i64 %34, i32 %35, i32 %36)
  store %struct.wpabuf* %37, %struct.wpabuf** %5, align 8
  br label %38

38:                                               ; preds = %31, %24, %13
  %39 = load %struct.wpabuf*, %struct.wpabuf** %5, align 8
  ret %struct.wpabuf* %39
}

declare dso_local %struct.wpabuf* @eap_msg_alloc(i32, i64, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
